tests/reference/asr-test_annassign_03-f8c6160.stderr
semantic error: Intent annotation 'InOut' cannot be used here
 --> tests/errors/test_annassign_03.py:6:13
  |
6 |     lexer : InOut[LasrLexer] = LasrLexer(5)
  |             ^^^^^^^^^^^^^^^^ 
